fixed products misaligning when text have more than 1 line.

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,13 @@ ul {
   height: 200pt;
 }
 
+.itemTitle{
+  left:0pt;
+  right:0pt;
+  display:inline-flex;
+  text-align: center;
+}
+
 .itemAddButton{
   position: absolute;
   right: 0pt;
